--- a/yaoqinghan/index.html
+++ b/yaoqinghan/index.html
@@ -128,6 +128,31 @@
             <div class="s3">
                 <img src="img/bigimg.png" alt="" class="lamp ani" swiper-animate-effect="fadeInLeftBig" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">
                 <div class="main">
+                    <h1 class="ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="1s" swiper-animate-delay="1s">技术支持</h1>
+                    <img src="img/s1img.png" alt="" class="ani" swiper-animate-effect="flipInY" swiper-animate-duration="1s" swiper-animate-delay="1s">
+                    <img src="img/s1small.png" alt="" class="ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="1s" swiper-animate-delay="1.5s">
+                    <img src="img/s1small.png" alt="" class="ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="1s" swiper-animate-delay="1.5s">
+                </div>
+                <div class="text">
+                    <img src="img/5G9bC_fw658.png" alt="">
+                    <ul>
+                        <li class="ani" swiper-animate-effect="rollIn" swiper-animate-duration="0.5s" swiper-animate-delay="1.5s">* Photoshop <small>全世界最棒的图像和照片编辑软件</small></li>
+                        <li class="ani" swiper-animate-effect="rotateInDownRight" swiper-animate-duration="0.5s" swiper-animate-delay="1.5s">* HTML <small>超文本标记语言</small></li>
+                        <li class="ani" swiper-animate-effect="rollIn" swiper-animate-duration="0.5s" swiper-animate-delay="1.6s">* CSS <small>层叠样式表,控制网页的样式和布局</small></li>
+                        <li class="ani" swiper-animate-effect="rotateInDownRight" swiper-animate-duration="0.5s" swiper-animate-delay="1.6s">* JavaScript <small>网络的脚本语言</small></li>
+                        <li class="ani" swiper-animate-effect="rollIn" swiper-animate-duration="0.5s" swiper-animate-delay="1.7s">* jQuery <small>一款可视化前端页面制作工具</small></li>
+                        <li class="ani" swiper-animate-effect="rotateInDownRight" swiper-animate-duration="0.5s" swiper-animate-delay="1.7s">* HTML5 <small>（HTML）的第五次重大修改</small></li>
+                        <li class="ani" swiper-animate-effect="rollIn" swiper-animate-duration="0.5s" swiper-animate-delay="1.8s">* CSS3 <small>CSS3 是最新的 CSS 标准</small></li>
+                        <li class="ani" swiper-animate-effect="rotateInDownRight" swiper-animate-duration="0.5s" swiper-animate-delay="1.8s">* Vue.js <small>一套构建用户界面的渐进式框架</small></li>
+                        <li class="ani" swiper-animate-effect="rollIn" swiper-animate-duration="0.5s" swiper-animate-delay="1.9s">* 微场景 <small>使用Html5编码的绚烂的页面</small></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="swiper-slide">
+            <div class="s4">
+                <img src="img/bigimg.png" alt="" class="lamp ani" swiper-animate-effect="fadeInLeftBig" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">
+                <div class="main">
                     <h1 class="ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="1s" swiper-animate-delay="1s">企业简介</h1>
                     <img src="img/s1img.png" alt="" class="ani" swiper-animate-effect="flipInY" swiper-animate-duration="1s" swiper-animate-delay="1s">
                     <img src="img/s1small.png" alt="" class="ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="1s" swiper-animate-delay="1.5s">
@@ -135,7 +160,6 @@
                 </div>
             </div>
         </div>
-        <div class="swiper-slide">Slide 4</div>
         <div class="swiper-slide">Slide 5</div>
         <div class="swiper-slide">Slide 6</div>
 
