--- a/yaoqinghan/index.html
+++ b/yaoqinghan/index.html
@@ -153,14 +153,31 @@
             <div class="s4">
                 <img src="img/bigimg.png" alt="" class="lamp ani" swiper-animate-effect="fadeInLeftBig" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">
                 <div class="main">
-                    <h1 class="ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="1s" swiper-animate-delay="1s">企业简介</h1>
+                    <h1 class="ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="1s" swiper-animate-delay="1s">作品展示</h1>
+                    <img src="img/s1img.png" alt="" class="ani" swiper-animate-effect="flipInY" swiper-animate-duration="1s" swiper-animate-delay="1s">
+                    <img src="img/s1small.png" alt="" class="ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="1s" swiper-animate-delay="1.5s">
+                    <img src="img/s1small.png" alt="" class="ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="1s" swiper-animate-delay="1.5s">
+                </div>
+                <div class="hot">
+                    <img src="img/img1.png" alt="" class="ani" swiper-animate-effect="rollIn" swiper-animate-duration="1.5s" swiper-animate-delay="1.5s">
+                    <img src="img/img2.png" alt="" class="ani" swiper-animate-effect="rollIn" swiper-animate-duration="1.5s" swiper-animate-delay="2s">
+                    <img src="img/img3.png" alt="" class="ani" swiper-animate-effect="rollIn" swiper-animate-duration="1.5s" swiper-animate-delay="2.5s">
+                    <img src="img/img4.png" alt="" class="ani" swiper-animate-effect="rollIn" swiper-animate-duration="1.5s" swiper-animate-delay="3s">
+                    <img src="img/img5.png" alt="" class="ani" swiper-animate-effect="rollIn" swiper-animate-duration="1.5s" swiper-animate-delay="3.5s">
+                </div>
+            </div>
+        </div>
+        <div class="swiper-slide">
+            <div class="s5">
+                <img src="img/bigimg.png" alt="" class="lamp ani" swiper-animate-effect="fadeInLeftBig" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">
+                <div class="main">
+                    <h1 class="ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="1s" swiper-animate-delay="1s">作品展示</h1>
                     <img src="img/s1img.png" alt="" class="ani" swiper-animate-effect="flipInY" swiper-animate-duration="1s" swiper-animate-delay="1s">
                     <img src="img/s1small.png" alt="" class="ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="1s" swiper-animate-delay="1.5s">
                     <img src="img/s1small.png" alt="" class="ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="1s" swiper-animate-delay="1.5s">
                 </div>
             </div>
         </div>
-        <div class="swiper-slide">Slide 5</div>
         <div class="swiper-slide">Slide 6</div>
 
     </div>
