--- a/yaoqinghan/index.html
+++ b/yaoqinghan/index.html
@@ -171,15 +171,24 @@
             <div class="s5">
                 <img src="img/bigimg.png" alt="" class="lamp ani" swiper-animate-effect="fadeInLeftBig" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">
                 <div class="main">
-                    <h1 class="ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="1s" swiper-animate-delay="1s">作品展示</h1>
+                    <h1 class="ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="1s" swiper-animate-delay="1s">诚挚邀请</h1>
                     <img src="img/s1img.png" alt="" class="ani" swiper-animate-effect="flipInY" swiper-animate-duration="1s" swiper-animate-delay="1s">
                     <img src="img/s1small.png" alt="" class="ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="1s" swiper-animate-delay="1.5s">
                     <img src="img/s1small.png" alt="" class="ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="1s" swiper-animate-delay="1.5s">
                 </div>
+                <div class="main">
+                    <form action="">
+                        <ul class="mainul">
+                            <li><input type="text" placeholder="* 姓名" class="mainul1 ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="1.5s"></li>
+                            <li><input type="text" placeholder="* 电话" class="mainul2 ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="1.6s"></li>
+                            <li><input type="text" placeholder="* 部门" class="mainul3 ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="1.7s"></li>
+                            <li><buttom class="mainul4 ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="1.8s">提交</buttom></li>
+                        </ul>
+                    </form>
+                    <p class="s7p2 ani" swiper-animate-effect="bounceIn" swiper-animate-duration="0.5s" swiper-animate-delay="2s">泊头市解放西路光明街150号</p>
+                </div>
             </div>
         </div>
-        <div class="swiper-slide">Slide 6</div>
-
     </div>
     <!-- Add Pagination -->
     <div class="swiper-pagination"></div>
