--- a/yaoqinghan/index.html
+++ b/yaoqinghan/index.html
@@ -196,7 +196,7 @@
 
 
     <!-- 背景音乐 -->
-    <audio id="mp3" src="mp3/40b155cb2563d8e6a16b35325b0d6ad5.mp3"></audio>
+    <audio id="mp3" src="mp3/40b155cb2563d8e6a16b35325b0d6ad5.mp3" autoplay loop></audio>
     <span id="mp3btn"><img src="img/musicIcon.png" alt=""></span>
 </div>
 
