--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-6 col-md-3">
-				<a href="weichangjing" class="thumbnail">
+				<a href="weichangjing" target="_blank" class="thumbnail">
 					<img src="img/2_03.gif" alt="...">
 				</a>
 				<p>微场景</p>
 			</div>
 			<div class="col-xs-6 col-md-3">
-				<a href="yaoqinghan" class="thumbnail">
+				<a href="yaoqinghan" target="_blank" class="thumbnail">
 					<img src="img/1_03.gif" alt="...">
 				</a>
 				<p>邀请函</p>
