--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<div class="row">
 			<div class="col-xs-6 col-md-3">
 				<a href="weichangjing" target="_blank" class="thumbnail">
-					<img src="img/2_03.gif" alt="...">
+					<img src="img/weichangjing_03.gif" alt="...">
 				</a>
 				<p>微场景</p>
 			</div>
